--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-jsonpath_rw==1.4.0
+Django==3.2.5
 cybox
 decorator==4.4.2
+jsonpath_rw==1.4.0
 libtaxii==1.1.114
 mixbox==1.0.3
 ordered_set==3.1.1
+parse==1.17.0
 ply
 python_dateutil==2.8.1
+requests==2.25.0
 six==1.14.0
 stix
