--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ libtaxii==1.1.114
 mixbox==1.0.3
 ordered_set==3.1.1
 parse==1.17.0
-ply=3.11
+ply==3.11
 python_dateutil==2.8.1
 requests==2.25.0
 six==1.14.0
